Fazendo o Básico dos itens 4 ao 7

--- a/index.html
+++ b/index.html
@@ -16,5 +16,38 @@
         <img id="minha_foto" src="fotoBruno.png" alt="Foto de Bruno">
     </header>
     
+    <!-- Listas --> 
+    <ol id="licoes_aprendidas">
+        <li>Unix</li>
+        <li>Bash</li>
+        <li>Shell</li>
+        <li>Git</li>
+        <li>GitHub</li>
+        <li>Internet</li>
+        <li>Básico de HTML</li>
+        <li>Básico de CSS</li>
+        <li>Estruturas e Posicionamento</li>
+        <li>HTML Semântico</li>
+    </ol>
+
+    <ul id="licoes_a_aprender">
+        <li>Básico de JavaScript (introdução)</li>
+        <li>JavaScript - Array e Loop For</li>
+        <li>JavaScript - Lógica de Progamação e Algoritmos</li>
+        <li>JavaScript - Obejtos e Funções</li>
+        <li>JavaScript - DOM e Seletores</li>
+        <li>JavaScript - Trabalhar com Elementos</li>
+        <li>JavaScript - Eventos</li>
+        <li>JavaScript - WebStorage</li>
+        <li>Bibliotecas JavaScript e Frameworks CSS</li>
+        <li>CSS FlexBox</li>
+    </ul>
+
+    <!-- Rodapé -->
+    <footer id="rodape">
+        Criado por Bruno Sayago
+        <a href="https://www.linkedin.com/in/bruno-sayago/" id="link-linkedin" target="_blank">LinkedIn</a>
+    </footer>
+    
 </body>
 </html>
