--- a/index.html
+++ b/index.html
@@ -48,6 +48,17 @@
         Criado por Bruno Sayago
         <a href="https://www.linkedin.com/in/bruno-sayago/" id="link-linkedin" target="_blank">LinkedIn</a>
     </footer>
+
+    <!-- Artigo -->
+    <article>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Error nobis eaque quas. Enim officiis, esse neque sunt minus exercitationem soluta a provident asperiores consectetur iste rem eos corporis excepturi repellat!
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit illo esse cupiditate nulla accusamus molestias quo, dolorem possimus obcaecati quisquam ipsa. Commodi officia repellendus, aliquam maxime hic tempora? Corporis, eaque.
+    </article>
+
+    <!-- Aside -->
+    <aside>
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Distinctio ratione, eligendi animi consectetur atque ad sint laudantium sapiente ab libero similique eveniet quidem maxime fugit veritatis unde voluptatum sequi doloremque?
+    </aside>
     
 </body>
 </html>
