Iniciando personalização da página - Cabeçalho

--- a/index.html
+++ b/index.html
@@ -8,57 +8,73 @@
     <title>Lições Aprendidas - Bruno Sayago</title>
 </head>
 <body>
+
     <!-- Cabeçalho --> 
     <header id="cabecalho"> 
         <h1 id="titulo">
             Lições Aprendidas na Trybe- Bruno Sayago
         </h1>
-        <img id="minha_foto" src="fotoBruno.png" alt="Foto de Bruno">
+        <nav id="navegacao">
+            <div class="blocobotao">
+                <a class="botaoref" href="#licoes_aprendidas">Lições Aprendidas</a>
+            </div>
+            <div class="blocobotao">
+                <a class="botaoref" href="#licoes_a_aprender">Lições à Aprender</a>
+            </div>
+            <div class="blocobotao">
+                <a class="botaoref" href="#aprendizado">Aprendizado</a>
+            </div>
+        </nav>
     </header>
+
+    <!-- Conteúdo Principal -->
+    <main id="conteudo">
+        <!-- Listas --> 
+        <ol id="licoes_aprendidas">
+            <li>Unix</li>
+            <li>Bash</li>
+            <li>Shell</li>
+            <li>Git</li>
+            <li>GitHub</li>
+            <li>Internet</li>
+            <li>Básico de HTML</li>
+            <li>Básico de CSS</li>
+            <li>Estruturas e Posicionamento</li>
+            <li>HTML Semântico</li>
+        </ol>
+
+        <ul id="licoes_a_aprender">
+            <li>Básico de JavaScript (introdução)</li>
+            <li>JavaScript - Array e Loop For</li>
+            <li>JavaScript - Lógica de Progamação e Algoritmos</li>
+            <li>JavaScript - Obejtos e Funções</li>
+            <li>JavaScript - DOM e Seletores</li>
+            <li>JavaScript - Trabalhar com Elementos</li>
+            <li>JavaScript - Eventos</li>
+            <li>JavaScript - WebStorage</li>
+            <li>Bibliotecas JavaScript e Frameworks CSS</li>
+            <li>CSS FlexBox</li>
+        </ul>
+
+        <!-- Artigo -->
+        <article id="aprendizado">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Error nobis eaque quas. Enim officiis, esse neque sunt minus exercitationem soluta a provident asperiores consectetur iste rem eos corporis excepturi repellat!
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit illo esse cupiditate nulla accusamus molestias quo, dolorem possimus obcaecati quisquam ipsa. Commodi officia repellendus, aliquam maxime hic tempora? Corporis, eaque.
+        </article>
+
+        <!-- Aside -->
+        <aside>
+            <img id="minha_foto" src="fotoBruno.png" alt="Foto de Bruno">
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Distinctio ratione, eligendi animi consectetur atque ad sint laudantium sapiente ab libero similique eveniet quidem maxime fugit veritatis unde voluptatum sequi doloremque?
+        </aside>
+
+    </main>
     
-    <!-- Listas --> 
-    <ol id="licoes_aprendidas">
-        <li>Unix</li>
-        <li>Bash</li>
-        <li>Shell</li>
-        <li>Git</li>
-        <li>GitHub</li>
-        <li>Internet</li>
-        <li>Básico de HTML</li>
-        <li>Básico de CSS</li>
-        <li>Estruturas e Posicionamento</li>
-        <li>HTML Semântico</li>
-    </ol>
-
-    <ul id="licoes_a_aprender">
-        <li>Básico de JavaScript (introdução)</li>
-        <li>JavaScript - Array e Loop For</li>
-        <li>JavaScript - Lógica de Progamação e Algoritmos</li>
-        <li>JavaScript - Obejtos e Funções</li>
-        <li>JavaScript - DOM e Seletores</li>
-        <li>JavaScript - Trabalhar com Elementos</li>
-        <li>JavaScript - Eventos</li>
-        <li>JavaScript - WebStorage</li>
-        <li>Bibliotecas JavaScript e Frameworks CSS</li>
-        <li>CSS FlexBox</li>
-    </ul>
-
     <!-- Rodapé -->
     <footer id="rodape">
         Criado por Bruno Sayago
         <a href="https://www.linkedin.com/in/bruno-sayago/" id="link-linkedin" target="_blank">LinkedIn</a>
     </footer>
 
-    <!-- Artigo -->
-    <article>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Error nobis eaque quas. Enim officiis, esse neque sunt minus exercitationem soluta a provident asperiores consectetur iste rem eos corporis excepturi repellat!
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit illo esse cupiditate nulla accusamus molestias quo, dolorem possimus obcaecati quisquam ipsa. Commodi officia repellendus, aliquam maxime hic tempora? Corporis, eaque.
-    </article>
-
-    <!-- Aside -->
-    <aside>
-        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Distinctio ratione, eligendi animi consectetur atque ad sint laudantium sapiente ab libero similique eveniet quidem maxime fugit veritatis unde voluptatum sequi doloremque?
-    </aside>
-    
 </body>
 </html>
