Começo da personalização das listas

--- a/index.html
+++ b/index.html
@@ -29,32 +29,38 @@
 
     <!-- Conteúdo Principal -->
     <main id="conteudo">
-        <!-- Listas --> 
-        <ol id="licoes_aprendidas">
-            <li>Unix</li>
-            <li>Bash</li>
-            <li>Shell</li>
-            <li>Git</li>
-            <li>GitHub</li>
-            <li>Internet</li>
-            <li>Básico de HTML</li>
-            <li>Básico de CSS</li>
-            <li>Estruturas e Posicionamento</li>
-            <li>HTML Semântico</li>
-        </ol>
+        <!-- Listas -->
+        <div id="lista-aprendida" class="bloco-lista">
+            <ol id="licoes_aprendidas" class="lista">
+                <h2>Lições Aprendidas</h2> 
+                <li>Unix</li>
+                <li>Bash</li>
+                <li>Shell</li>
+                <li>Git</li>
+                <li>GitHub</li>
+                <li>Internet</li>
+                <li>Básico de HTML</li>
+                <li>Básico de CSS</li>
+                <li>Estruturas e Posicionamento</li>
+                <li>HTML Semântico</li>
+            </ol>
+        </div>
 
-        <ul id="licoes_a_aprender">
-            <li>Básico de JavaScript (introdução)</li>
-            <li>JavaScript - Array e Loop For</li>
-            <li>JavaScript - Lógica de Progamação e Algoritmos</li>
-            <li>JavaScript - Obejtos e Funções</li>
-            <li>JavaScript - DOM e Seletores</li>
-            <li>JavaScript - Trabalhar com Elementos</li>
-            <li>JavaScript - Eventos</li>
-            <li>JavaScript - WebStorage</li>
-            <li>Bibliotecas JavaScript e Frameworks CSS</li>
-            <li>CSS FlexBox</li>
-        </ul>
+        <div id="lista-aprender" class="bloco-lista"> 
+            <ul id="licoes_a_aprender" class="lista">
+                <h2>Lições a Aprender</h2>
+                <li>Básico de JavaScript (introdução)</li>
+                <li>JavaScript - Array e Loop For</li>
+                <li>JavaScript - Lógica de Progamação e Algoritmos</li>
+                <li>JavaScript - Obejtos e Funções</li>
+                <li>JavaScript - DOM e Seletores</li>
+                <li>JavaScript - Trabalhar com Elementos</li>
+                <li>JavaScript - Eventos</li>
+                <li>JavaScript - WebStorage</li>
+                <li>Bibliotecas JavaScript e Frameworks CSS</li>
+                <li>CSS FlexBox</li>
+            </ul>
+        </div>
 
         <!-- Artigo -->
         <article id="aprendizado">
