--- a/index.html
+++ b/index.html
@@ -29,6 +29,22 @@
 
     <!-- Conteúdo Principal -->
     <main id="conteudo">
+
+        <!-- Artigo -->
+        <article id="aprendizado" class="lado-esquerdo">
+            <p>
+                siandisnadinsadinasindisand dsiand inasdin idsn isand isn isan dindsia ndin saind isan idns isani ndsian disa idn inasi dnisa ndinsa idni sand isnaid nsai ndisn idan isndi nsian disan idnisan disand isnadin asidnisandi snadi nsaidn isandn isadn sandisandisandi sand nisad nisnd ain isn disan idnsia ndiasn disa ndisan dsan dsa dsani disand isandnsadn asidn saidnuaosdbiouasfbufboasu bo  osaf oba sfosaf basoif nosaif kas iof hnaoid k   ikdiddididi   idididididi iddiiodosos odjs
+            </p>
+        </article>
+
+        <!-- Aside -->
+        <aside class="lado-direito">
+            <div id="conteudo-aside">
+                <img id="minha_foto" src="fotoBruno.png" alt="Foto de Bruno">
+                <p>aishaishasoas j9sdj99jd jsdoisdisi sdihdishdfi hdsihdi  diiadhi di idj idbsusdinsn odsno idso nosd nds nifn fs nnifw ni wfni wfn iwnof wfib wf nfwi fwi wub 9wif iwbb9fw wfib9iwf bwfi bw9fnwifbwib iwfb wi bwib9 wbif w</p>
+            </div>
+        </aside>
+
         <!-- Listas -->
         <div id="lista-aprendida" class="bloco-lista">
             <ol id="licoes_aprendidas" class="lista">
@@ -62,17 +78,7 @@
             </ul>
         </div>
 
-        <!-- Artigo -->
-        <article id="aprendizado">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Error nobis eaque quas. Enim officiis, esse neque sunt minus exercitationem soluta a provident asperiores consectetur iste rem eos corporis excepturi repellat!
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit illo esse cupiditate nulla accusamus molestias quo, dolorem possimus obcaecati quisquam ipsa. Commodi officia repellendus, aliquam maxime hic tempora? Corporis, eaque.
-        </article>
-
-        <!-- Aside -->
-        <aside>
-            <img id="minha_foto" src="fotoBruno.png" alt="Foto de Bruno">
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Distinctio ratione, eligendi animi consectetur atque ad sint laudantium sapiente ab libero similique eveniet quidem maxime fugit veritatis unde voluptatum sequi doloremque?
-        </aside>
+        
 
     </main>
     
