Personalizando os Links da navegação

--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
         </h1>
         <nav id="navegacao">
             <div class="botao">
-                <a class="botao-link" href="#licoes_aprendidas">Lições Aprendidas</a>
+                <a class="botao-link" href="#primeira-parte">Aprendizado</a>
             </div>
             <div class="botao">
-                <a class="botao-link" href="#licoes_a_aprender">Lições à Aprender</a>
+                <a class="botao-link" href="#licoes_aprendidas">Lições da Trybe</a>
             </div>
             <div class="botao">
                 <a class="botao-link" href="#aprendizado">Aprendizado</a>
@@ -41,12 +41,12 @@
             <aside class="lado-direito">
                 <div id="conteudo-aside">
                     <img id="minha_foto" src="fotoBruno.png" alt="Foto de Bruno">
-                    <p>aishaishasoas j9sdj99jd jsdoisdisi sdihdishdfi hdsihdi  diiadhi di idj idbsusdinsn odsno idso nosd nds nifn fs nnifw ni wfni wfn iwnof wfib wf nfwi fwi wub 9wif iwbb9fw wfib9iwf bwfi bw9fnwifbwib iwfb wi bwib9 wbif w</p>
+                    <p>aishaish ddddada dadada dadad adadasoas hdsihdi  diiadhi di idj idbsusdinsn odsno idso nosd nds nifn fs nnifw ni wfni wfn iwnof wfib wf nfwi fwi wub 9wi</p>
                 </div>
             </aside>
 
         </div>
-        
+
         <!-- Listas -->
         <div id="lista-aprendida" class="bloco-lista">
             <ol id="licoes_aprendidas" class="lista">
