Adicionando tabela e personalizando

--- a/index.html
+++ b/index.html
@@ -80,7 +80,106 @@
             </ul>
         </div>
 
-        
+        <!-- Tabela -->
+        <div id="secao-tabela"> 
+            <h2>Tabela de Blocos da Trybe</h2>
+
+            <table id="tabela-módulos">
+                <tr id="primeira-linha">
+                    <th>Fundamentos de Desenvolvimento Web</th>
+                    <th>Desenvolvimento Front-End</th>
+                    <th>Desenvolvimento Back-End</th>
+                    <th>Ciência da Computação</th>
+                </tr>
+                <tr class="impar">
+                    <td>Unix e Bash</td>
+                    <td>JavaScript e Testes Assíncronos</td>
+                    <td>Docker: Utilizando Containers</td>
+                    <td>Introdução à Python</td>
+                </tr>
+                <tr class="par">
+                    <td>Git, GitHub e Internet</td>
+                    <td>Introdução à React</td>
+                    <td>Introdução à SQL</td>
+                    <td>Padrões de Objetos</td>
+                </tr>
+                <tr class="impar">
+                    <td>Introdução à HTML e CSS</td>
+                    <td>Componentes com Estado, Eventos e Formulários com React</td>
+                    <td>Funções SQL, JOINs e Normalização</td>
+                    <td>Redes e Raspagem de Dados</td>
+                </tr>
+                <tr class="par">
+                    <td>Introdução à JavaScript e Lógica de Programação</td>
+                    <td>Ciclo de Vida de Componentes e React Router</td>
+                    <td>Introdução ao desenvolvimento Web com Node.js</td>
+                    <td>Algoritmos</td>
+                </tr>
+                <tr class="impar">
+                    <td>JavaScript: DOM, Eventos e Web Storage</td>
+                    <td>Metodologias Ágeis</td>
+                    <td>Node.js: Camada de Serviço e Arquitetura Rest e Restful</td>
+                    <td>Estrutura de Dados I: Arrays, Listas, Filas e Pilhas</td>
+                </tr>
+                <tr class="par">
+                    <td>HTML e CSS: Forms, Flexbox e Responsivo</td>
+                    <td>Testes automatizados com React Testing Library</td>
+                    <td>Node.js: ORM e Autenticação</td>
+                    <td>Estrutura de Dados II: Hashmaps e Sets</td>
+                </tr>
+                <tr class="impar">
+                    <td>Introdução à JavaScript ES6 e Testes Unitários</td>
+                    <td>Gerenciamento de estado com Redux</td>
+                    <td>Deployment</td>
+                    <td>-</td>
+                </tr>
+                <tr class="par">
+                    <td>Higher Order Functions do JavaScript ES6</td>
+                    <td>Projeto Jogo de Trivia</td>
+                    <td>TypeScript</td>
+                    <td>-</td>
+                </tr>
+                <tr class="impar">
+                    <td>-</td>
+                    <td>Context API e React Hooks</td>
+                    <td>Programação Orientada a Objetos (POO) e Solid</td>
+                    <td>-</td>
+                </tr>
+                <tr class="par">
+                    <td>-</td>
+                    <td>Projeto App de Receitas</td>
+                    <td>Projeto - TFC - Trybe Futebol Clube</td>
+                    <td>-</td>
+                </tr>
+                <tr class="impar">
+                    <td>-</td>
+                    <td>-</td>
+                    <td>Introdução ao MongoDB</td>
+                    <td>-</td>
+                </tr>
+                <tr class="par">
+                    <td>-</td>
+                    <td>-</td>
+                    <td>MongoDB com Node.js e POO</td>
+                    <td>-</td>
+                </tr>
+                <tr class="impar">
+                    <td>-</td>
+                    <td>-</td>
+                    <td>Projeto - App de Delivery</td>
+                    <td>-</td>
+                </tr>
+                <tr class="par">
+                    <td>-</td>
+                    <td>-</td>
+                    <td>Masterclass - VPS, CI/CD</td>
+                    <td>-</td>
+                </tr>
+
+
+            </table>
+
+        </div>
 
     </main>
     
