Ajeitando posicionamento das partes da página

--- a/index.html
+++ b/index.html
@@ -10,22 +10,24 @@
 <body>
 
     <!-- Cabeçalho --> 
-    <header id="cabecalho"> 
-        <h1 id="titulo">
-            Lições Aprendidas na Trybe- Bruno Sayago
-        </h1>
-        <nav id="navegacao">
-            <div class="botao">
-                <a class="botao-link" href="#primeira-parte">Aprendizado</a>
-            </div>
-            <div class="botao">
-                <a class="botao-link" href="#licoes_aprendidas">Lições da Trybe</a>
-            </div>
-            <div class="botao">
-                <a class="botao-link" href="#aprendizado">Aprendizado</a>
-            </div>
-        </nav>
-    </header>
+    <div id="bloco-cabecalho"> 
+        <header id="cabecalho"> 
+            <h1 id="titulo">
+                Lições Aprendidas na Trybe- Bruno Sayago
+            </h1>
+            <nav id="navegacao">
+                <div class="botao">
+                    <a class="botao-link" href="#primeira-parte">Aprendizado</a>
+                </div>
+                <div class="botao">
+                    <a class="botao-link" href="#lista-aprendida">Lições da Trybe</a>
+                </div>
+                <div class="botao">
+                    <a class="botao-link" href="#secao-tabela">Tabela de Blocos</a>
+                </div>
+            </nav>
+        </header>
+    </div>
 
     <!-- Conteúdo Principal -->
     <main id="conteudo">
