--- a/index.html
+++ b/index.html
@@ -43,7 +43,9 @@
             <aside class="lado-direito">
                 <div id="conteudo-aside">
                     <img id="minha_foto" src="fotoBruno.png" alt="Foto de Bruno">
-                    <p>aishaish ddddada dadada dadad adadasoas hdsihdi  diiadhi di idj idbsusdinsn odsno idso nosd nds nifn fs nnifw ni wfni wfn iwnof wfib wf nfwi fwi wub 9wi</p>
+                    <p>Estudante de Engenharia Química pela <strong>Universidade Federal de Minas Gerais</strong><br>
+                    Estudante de Desenvolvimento Web | Full-Stack na <strong>Trybe</strong> <br>
+                    Atualmente reside em <strong>Belo Horizonte - Minas Gerais - Brasil</strong></p>
                 </div>
             </aside>
 
