Atualizando a parte de aprendizado (article) e aside

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <!-- Artigo -->
             <article id="aprendizado" class="lado-esquerdo">
                 <p>
-                    siandisnadinsadinasindisand dsiand inasdin idsn isand isn isan dindsia ndin saind isan idns isani ndsian disa idn inasi dnisa ndinsa idni sand isnaid nsai ndisn idan isndi nsian disan idnisan disand isnadin asidnisandi snadi nsaidn isandn isadn sandisandisandi sand nisad nisnd ain isn disan idnsia ndiasn disa ndisan dsan dsa dsani disand isandnsadn asidn saidnuaosdbiouasfbufboasu bo  osaf oba sfosaf basoif nosaif kas iof hnaoid k   ikdiddididi   idididididi iddiiodosos odjs
+                    A Trybe é um curso de desenvolvimento web focado no mercado de trabalho. O curso ensina a programar, a aprender e a trabalhar. Você aprende as habilidades técnicas para ser um desenvolvedor, como desenvolvimento front-end e back-end, mas também as soft skills (habilidades socioemocionais) e as metodologias ágeis que fazem parte do dia a dia dessa área. Na Trybe, o aprendizado é estimulado por exercícios práticos, que preparam os alunos para a realidade do mercado.
                 </p>
             </article>
 
@@ -43,9 +43,7 @@
             <aside class="lado-direito">
                 <div id="conteudo-aside">
                     <img id="minha_foto" src="fotoBruno.png" alt="Foto de Bruno">
-                    <p>Estudante de Engenharia Química pela <strong>Universidade Federal de Minas Gerais</strong><br>
-                    Estudante de Desenvolvimento Web | Full-Stack na <strong>Trybe</strong> <br>
-                    Atualmente reside em <strong>Belo Horizonte - Minas Gerais - Brasil</strong></p>
+                    <p>Estudante de Engenharia Química pela UFMG<br>Estudante de Desenvolvimento Web | Full-Stack na <strong>Trybe</strong><br></p>
                 </div>
             </aside>
 
